# Custom-Ecommerce-Application

./: README.md  db.sqlite3  package.json
api/: db.sqlite3
api/core/: admin.py  serializers.py  urls.py  views.py
api/places/: admin.py  models.py
backend/: .gitignore  pyproject.toml  settings.py  urls.py
backend/backend/: schema.py  settings.py  urls.py
backend/backend/orders/: admin.py  apps.py  models.py  schema.py
backend/backend/orders/migrations/: 0001_initial.py  0002_remove_order_shop.py
backend/backend/products/: admin.py  apps.py  models.py  schema.py
backend/backend/products/migrations/: 0001_initial.py  0002_product_searchtags_brand_product_brand.py  0002_rename_catogoryid_subcategory_categoryid.py  0003_alter_product_options_product_quantity.py  0004_brand_image_product_shop.py  0005_subcategory_image.py  0006_userwishlistitem.py  0007_productimages_variant_name_delete_userwishlistitem.py
backend/backend/users/: admin.py  apps.py  forms.py  manager.py  models.py  schema.py
backend/backend/users/migrations/: 0001_initial.py  0002_seller.py  0003_alter_appuser_options_alter_seller_options.py  0004_alter_seller_shopavatar.py  0005_sellerdetails.py  0006_sellerrating.py  0007_alter_sellerdetails_sellerid.py
client/: app.vue  nuxt.config.ts  package.json  tailwind.config.js
client/app/: router.options.ts
client/components/: Footer.vue  HeroCarousel.vue
client/graphql/: schema.ts
core/: admin.py  models.py  serializers.py  urls.py  views.py
places/: serializers.py  urls.py  views.py
services/: serializers.py  urls.py
(+216 files in other folders)
